# test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: FindFFTW3.cmake  stretch_engine-config.cmake.in
examples/: README.md  generate_test_file.cpp
include/: stretch_engine.h
src/cli/: stretch_engine.cpp
src/core/: AudioStretchProcessor.cpp  NoiseMorphing.cpp  NoiseMorphing.h  PitchScaling.cpp  PitchScaling.h  STNDecomposition.cpp  STNDecomposition.h  STNDecompositionDecl.h
tests/: CMakeLists.txt  basic_tests.cpp
